Add logo icon and improvements

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#E9AB51" />
     <meta name="description" content="Markdown editor" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400;500;600&display=swap"
       rel="stylesheet">
